--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "让每个人有平等获取知识的权力"
 keyword: "小明俱乐部, C++, 汇编, JAVA, 计算机体系结构, 机器视觉, 数字图像处理"
 url: "http://xiaomingjulebu.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/xiaomingjulebu/xiaomingjulebu.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -18,12 +18,12 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 
 # SNS settings
 RSS: false
-# weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
-github_username:    qiubaiying
-facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
-#twitter_username:   qiubaiying
+# weibo_username:     xiaomingjulebu
+#zhihu_username:     xiaomingjulebu
+#github_username:    xiaomingjulebu
+#facebook_username:  xiaomingjulebu
+#jianshu_username:   xiaomingjulebu
+#twitter_username:   xiaomingjulebu
 
 
 
@@ -57,7 +57,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: qiubaiying
+#disqus_username: xiaomingjulebu
 
 # Gitalk
 gitalk:
