--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: /img/aboutclub.jpg      # use absolute URL, seeing it's used in 
 RSS: false
 # weibo_username:     xiaomingjulebu
 #zhihu_username:     xiaomingjulebu
-#github_username:    xiaomingjulebu
+github_username:    xiaomingjulebu
 #facebook_username:  xiaomingjulebu
 #jianshu_username:   xiaomingjulebu
 #twitter_username:   xiaomingjulebu
